# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "mynewt-core-hw-bsp-pinetime"
version = "0.1.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mynewt-core-hw-bus = { version = "0.1.0", path = "../mynewt-core-hw-bus" }
mynewt-core-hw-hal = { version = "0.1.0", path = "../mynewt-core-hw-hal" }
mynewt-core-kernel-os = { version = "0.1.0", path = "../mynewt-core-kernel-os" }
mynewt-sys = { version = "0.1.0", path = "../mynewt-sys" }
