# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "mynewt-core-hw-bus"
version = "0.1.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"

[dependencies]
mynewt-core-hw-bus-bindgen = { version = "0.1.0", path = "../mynewt-core-hw-bus-bindgen" }
mynewt-core-kernel-os-bindgen = { version = "0.1.0", path = "../mynewt-core-kernel-os-bindgen" }
mynewt-core-hw-hal = { version = "0.1.0", path = "../mynewt-core-hw-hal" }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
cortex-m-semihosting = "0.3.5"
