# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "mynewt-core-hw-hal"
version = "0.1.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"

[dependencies]
mynewt-core-hw-hal-bindgen = { version = "0.1.0", path = "../mynewt-core-hw-hal-bindgen" }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
