# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "mynewt-core-mgmt-imgmgr"
version = "0.1.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"

[dependencies]
mynewt-core-mgmt-imgmgr-bindgen = { version = "0.1.0", path = "../mynewt-core-mgmt-imgmgr-bindgen" }
cty = "0.2.1"
heapless = "0.5.5"
