# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "mynewt-core-sys-reboot"
version = "0.1.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"

[dependencies]
mynewt-core-sys-reboot-bindgen = { version = "0.1.0", path = "../mynewt-core-sys-reboot-bindgen" }
mynewt-core-hw-hal-bindgen = { version = "0.1.0", path = "../mynewt-core-hw-hal-bindgen" }
cty = "0.2.1"
