# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "mynewt-nimble-host-bindgen"
version = "0.1.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"

[dependencies]
cty = "0.2.1"

[build-dependencies]
bindgen = "0.54.0"
mynewt-bindgen-helper = { version = "0.1.0", path = "../mynewt-bindgen-helper" }
