# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "mynewt-nimble-host"
version = "0.1.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"

[dependencies]
mynewt-nimble-host-bindgen = { version = "0.1.0", path = "../mynewt-nimble-host-bindgen" }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
cortex-m-semihosting = "0.3.5"
cty = "0.2.1"
