# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "mynewt-pinetime-bsp"
version = "0.1.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mynewt-core-hw-hal = { version = "0.1.0", path = "../mynewt-core-hw-hal" }
cty = "0.2.1"

[build-dependencies]
bindgen = "0.54.0"
mynewt-bindgen-helper = { version = "0.1.0", path = "../mynewt-bindgen-helper" }
