# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "mynewt"
version = "0.1.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"

[dependencies]
mynewt-core-hw-bus = { version = "0.1.0", path = "../mynewt-core-hw-bus" }
mynewt-core-hw-bsp-pinetime = { version = "0.1.0", path = "../mynewt-core-hw-bsp-pinetime" }
mynewt-core-hw-hal = { version = "0.1.0", path = "../mynewt-core-hw-hal" }
mynewt-core-kernel-os = { version = "0.1.0", path = "../mynewt-core-kernel-os" }
mynewt-core-mgmt-imgmgr = { version = "0.1.0", path = "../mynewt-core-mgmt-imgmgr" }
mynewt-core-sys-config = { version = "0.1.0", path = "../mynewt-core-sys-config" }
mynewt-core-sys-reboot = { version = "0.1.0", path = "../mynewt-core-sys-reboot" }
mynewt-nimble-host = { version = "0.1.0", path = "../mynewt-nimble-host" }
mynewt-nimble-host-services = { version = "0.1.0", path = "../mynewt-nimble-host-services" }
