# Copyright (C) 2020 Casper Meijn <casper@meijn.net>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "mynewt"
version = "0.1.0"
authors = ["Casper Meijn <casper@meijn.net>"]
edition = "2018"

[dependencies]
cty = "0.2.1"
embedded-hal = { version = "0.2.4", features = ["unproven"] }
mynewt-sys = { version = "0.1.0", path = "../mynewt-sys" }
spin = "0.7.0"

